# vayload-kit

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/pipelines-ex/: github-actions.yml  gitlab-pipelines.yml
scripts/: install-dev.sh  install-win.ps1  install.ps1  install.sh
src/: auth.rs  config.rs  credentials_manager.rs  http_client.rs  main.rs  manifest.rs  pre.rs  types.rs  utils.rs
src/commands/: add.rs  audit.rs  clean.rs  init.rs  install.rs  list.rs  mod.rs  publish.rs  remove.rs  update.rs
src/encoding/: mod.rs
src/encoding/json5/: de.rs  error.rs  mod.rs  parser.rs  ser.rs  tests.rs  value.rs
