[package]
name = "vayload-kit"
version = "0.1.0-alpha.5"
edition = "2024"
authors = ["Alex Zweiter <szweiter@gmail.com>"]
description = "CLI tool for developing and publishing plugins for Vayload CMS"
license = "MIT"

[features]
default = ["full"]
full = ["open", "chacha20poly1305", "generic-array", "tiny_http", "rand", "base64", "dialoguer", "url"]
minimal = []

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "color"] }
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "8.0.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
indicatif = "0.17"
colored = "2.1"
walkdir = "2.4"
thiserror = "1.0"
dirs = "5.0"
config = "0.15.19"
globset = "0.4.18"
cfg-if = "1.0"
indexmap = "2.13.0"

url = {version ="2.5", optional = true}
open = { version = "5.0", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
generic-array = { version = "1.3.5", optional = true }
tiny_http = { version = "0.12", optional = true }
rand = { version = "0.10.0", optional = true }
base64 = { version = "0.22.1", optional = true }
dialoguer = { version = "0.12.0", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "vk"
path = "src/main.rs"

[[bin]]
name = "vk-ci"
path = "src/main.rs"
required-features = ["minimal"]
